--- a/index.qmd
+++ b/index.qmd
@@ -9,17 +9,7 @@ This data analysis seminar focuses on linear regression analysis to explore ques
 
 Computer applications will focus on R statistical language, the Rstudio environment ([https://www.rstudio.com](https://www.rstudio.com/)) and the PROCESS software by Andrew F. Hayes ([http://processmacro.org](http://processmacro.org/)).
 
-The course is subdivided into the following learning units:
-
--   The introductory part of the course is dedicated to a brief review of the basic principles of linear regression and the setup of R and PROCESS for statistical analysis. We discuss multiple regression analysis and its principles to understand how to fit, visualize, interpret, and evaluate multiple regression models in R. We also get a first overview of mediation, moderation, and conditional process models.
-
--   We then focus on mediation analysis, seeing how to fit, visualize, interpret, and evaluate mediation models using PROCESS in the R environment.
-
--   The following learning unit is dedicated to moderation analysis and explaining how to fit, visualize, interpret, and evaluate moderation models using PROCESS in the R environment.
-
--   The final learning unit is an overview of conditional process analysis and aims at explaining how to fit, visualize, interpret, and evaluate conditional process models using PROCESS in the R environment.
-
-The last part of the course is dedicated to the project work.
+## Learning outcomes
 
 By the end of this course, participants are expected to know how:
 
@@ -32,6 +22,8 @@ By the end of this course, participants are expected to know how:
 -   Estimate the contingencies of mechanisms through the computation and inference about conditional indirect effects.
 
 -   Use the R language and PROCESS to run, visualize, and understand linear regression, moderation, mediation, and conditional process models.
+
+## Handbook
 
 The handbook of the course and the primary source of most of the material here presented is:
 
